# storekey

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: decode.rs  encode.rs  features.rs  impls.rs  lib.rs  reader.rs  test.rs  to_escaped.rs  types.rs  writer.rs
src/decode/: read.rs
storekey-derive/: Cargo.toml
storekey-derive/src/: lib.rs
storekey-derive/src/impls/: borrow_decode.rs  decode.rs  encode.rs  mod.rs
storekey_derive/: Cargo.toml
storekey_derive/src/: lib.rs
storekey_derive/src/impls/: mod.rs
tests/: derive.rs  simple.rs
