[package]
name = "storekey"
publish = true
edition = "2021"
version = "0.5.0"
authors = [
	"Tobie Morgan Hitchcock <tobie@surrealdb.com>",
	"Michal Hornicky <mhornick@redhat.com>",
	"Dan Burkert <dan@danburkert.com>",
]
description = "Lexicographic sort-order preserving binary encoding format for key-value stores"
repository = "https://github.com/surrealdb/storekey"
homepage = "https://github.com/surrealdb/storekey"
keywords = ["database", "encoding", "key-value", "kv-store", "serialization"]
categories = ["encoding"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.5.0"
memchr = "2.7.4"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
serde_bytes = "0.11.17"
