[package]
name = "storekey"
publish = true
edition = "2021"
version = "0.7.0"
authors = [
	"Tobie Morgan Hitchcock <tobie@surrealdb.com>",
	"Michal Hornicky <mhornick@redhat.com>",
	"Dan Burkert <dan@danburkert.com>",
]
description = "Lexicographic sort-order preserving binary encoding format for key-value stores"
repository = "https://github.com/surrealdb/storekey"
homepage = "https://github.com/surrealdb/storekey"
keywords = ["database", "encoding", "key-value", "kv-store", "serialization"]
categories = ["encoding"]
license = "Apache-2.0"

[workspace]
members = ["./", "storekey-derive"]

[features]
default = ["derive"]
derive = ["storekey-derive"]
uuid = ["dep:uuid"]

[dependencies]
storekey-derive = { version = "0.8.0", path = "storekey-derive", optional = true }
uuid = { version = "1.17", optional = true }
